--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "psadmin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
-  "author": "Cory House",
-  "license": "ISC",
   "dependencies": {
     "bootstrap": "^3.3.5",
     "browserify": "^11.0.1",
